--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,33 +15,83 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
 
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #000000;
   background-color: #ffffff;
+  height: 100%;
+}
+
+.main-container {
+  flex-grow: 1;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
 }
 
 /* Блок с навигацией */
 
 .page-header {
   color: #000000;
-  background-color: #ffffff
+  background-color: #ffffff;
+  height: 1200px;
 }
+
+.navigation {
+  display: flex;
+  width: 1200;
+  margin: 0 auto;
+}
+
+.navigation-list {
+  width: 620px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.navigation-user {
+  max-width: 320px;
+  margin-left: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 
 /* Ссылки */
 
 .navigation-link {
-  font-family: "PT Sans", sans-serif;
-  line-height: 24px;
-  font-weight: 700;
-  text-align: center;
-  color: inherit;
   text-decoration: none;
   text-transform: none;
 }
+
+.footer-social-link {
+  text-decoration: none;
+ }
+
 
 .header-button {
   color: #fff;
@@ -53,6 +103,9 @@ body {
   line-height: 20px;
   letter-spacing: 0;
   text-transform: uppercase;
+  width: 160px;
+  height: 36px;
+  margin-left: 20px;
 }
 
 
@@ -65,6 +118,8 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 /* Преимущества */
@@ -94,10 +149,85 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 
+.advantages-item-container {
+  display: flex;
+  width: 1200px;
+  height: 385px;
+  margin: 0 auto;
+}
 
-.index-colums .advantages-title {
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.advantages-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 385px;
+}
+
+.advantages-item {
+  background-color: #82b3d3;
+}
+
+.advantages-item-blue {
+  background-color: #82b3d3;
+  width: 1200px;
+  height: 385px;
+  text-align: center;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.advantages-item-square, .advantages-item-tourism {
+  background-color: #f0f6fa;
+  width: 400px;
+  height: 385px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.advantages-item-road {
+  background-color: #e7f0f6;
+  width: 400px;
+  height: 385px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.infrastructure-item-burger {
+  background-color: #ffffff;
+  width: 400px;
+  height: 385px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.infrastructure-item-hotel, .infrastructure-item-gift {
+  background-color: #f0f6fa;
+  width: 400px;
+  height: 385px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.index-columns {
   color: #fff;
   background-color: #82b3d3;
   font-weight: 700;
@@ -105,9 +235,13 @@ body {
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
+  width: 400px;
+  height: 385px;
+  display: flex;
+  flex-direction: column;
 }
 
-.index-colums .advantages-desc {
+.index-columns .advantages-desc {
   color: #fff;
   background-color: #82b3d3;
   font-weight: 400;
@@ -119,12 +253,14 @@ body {
 
 
 .advantages-desc {
+  margin: 0;
   color: #000;
   font-weight: 400;
   font-size: 18px;
   line-height: 12px;
   text-align: center;
   text-transform: none;
+  padding: 0 85;
 }
 
 .advantages-title {
@@ -134,6 +270,7 @@ body {
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
+  padding: 0 112.5;
 }
 
 /* Приглашение и инфраструктура */
@@ -147,6 +284,10 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
 }
 
 .infrastructure-desc {
@@ -160,6 +301,15 @@ body {
 }
 
 /* Поиск гостиниц и подписка */
+
+.search {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  width: 1200px;
+  height: 406px;
+}
 
 .search-title {
   color: #000000;
@@ -195,6 +345,9 @@ body {
   letter-spacing: 0;
   text-transform: uppercase;
   align-items: center;
+  width: 376px;
+  height: 52px;
+  margin: 0;
 }
 
 /* Рассылка */
@@ -206,6 +359,9 @@ body {
   background-repeat: no-repeat;
   text-align: center;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 .subscribe-title {
@@ -248,9 +404,34 @@ body {
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 /* Подвал */
+
+.page-footer {
+  margin: 0;
+  display: flex;
+}
+
+.footer-social {
+  width: 142px;
+}
+
+.footer-social-list {
+  color: #000000;
+}
+
+.footer-social-item {
+  color: #000000;
+  text-align: center;
+  font-family: "PT Sans", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
 
 .footer-phone {
   color: #000;
@@ -261,6 +442,8 @@ body {
   line-height: 40px;
   text-transform: uppercase;
   text-decoration: none;
+  text-align: center;
+  margin: 0;
 }
 
 /* Страница каталога */
